--- a/src/main/resources/templates/damageReportConfirmation.html
+++ b/src/main/resources/templates/damageReportConfirmation.html
@@ -40,7 +40,7 @@
           <span th:text="${#strings.defaultString(rental?.deliveryAddress, 'Ikke tilgængelig')}"></span></p>
 
         <h3>Overordnet Beskrivelse</h3>
-        <textarea name="overallDescription" id="overallDescription" required placeholder="Fx 'Ingen skader' eller 'Mindre ridser på kofanger'"></textarea>
+        <textarea name="overallDescription" id="overallDescription" required placeholder="Fx 'Få mindre skader eller generel rengøring'"></textarea>
 
         <h3>Skader</h3>
         <div id="damages"></div>
