--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="card">
-                <h3>Udlejede Biler</h3>
+                <h3>Bil oversigt</h3>
                 <a th:href="@{/carOverview}" class="btn-link">Se Oversigt</a>
             </div>
 
