--- a/src/main/resources/templates/statisticsCarList.html
+++ b/src/main/resources/templates/statisticsCarList.html
@@ -38,7 +38,7 @@
                         <th>Bil ID</th>
                         <th>Brand</th>
                         <th>Model</th>
-                        <th>Gennemsnitlig Tid Før Ny Udlejning</th>
+                        <th>Tid Før Ny Udlejning</th>
                         <th>Gennemsnitlig Udlejningsvarighed</th>
                     </tr>
                     </thead>
