--- a/src/main/resources/templates/addCars.html
+++ b/src/main/resources/templates/addCars.html
@@ -1,3 +1,6 @@
+<!-- Side for tilføjelse af bil -->
+<!-- Julius Gissel -->
+
 <!DOCTYPE html>
 <html lang="da" xmlns:th="http://www.thymeleaf.org">
 <head>
