--- a/src/main/resources/templates/buyCar.html
+++ b/src/main/resources/templates/buyCar.html
@@ -1,3 +1,6 @@
+<!-- Side for køb af bil efter skadesrapport siden -->
+<!-- Julius Gissel -->
+
 <!DOCTYPE html>
 <html lang="da" xmlns:th="http://www.thymeleaf.org">
 <head>
