--- a/src/main/resources/templates/buyCarDone.html
+++ b/src/main/resources/templates/buyCarDone.html
@@ -1,3 +1,6 @@
+<!-- Bekræftelsesside for fuldført køb af bil efter udlejning -->
+<!-- Julius Gissel -->
+
 <!DOCTYPE html>
 <html lang="da" xmlns:th="http://www.thymeleaf.org">
 <head>
