--- a/src/main/resources/templates/carOverview.html
+++ b/src/main/resources/templates/carOverview.html
@@ -1,3 +1,6 @@
+<!-- Side med oversigt over programmets biler -->
+<!-- Julius Gissel -->
+
 <!DOCTYPE html>
 <html lang="da" xmlns:th="http://www.thymeleaf.org">
 <head>
