--- a/src/main/resources/templates/carOverviewDetails.html
+++ b/src/main/resources/templates/carOverviewDetails.html
@@ -1,3 +1,6 @@
+<!-- Detaljeside for specifik bil i oversigten -->
+<!-- Julius Gissel -->
+
 <!DOCTYPE html>
 <html lang="da" xmlns:th="http://www.thymeleaf.org">
 <head>
