--- a/src/main/resources/templates/carOverviewEdit.html
+++ b/src/main/resources/templates/carOverviewEdit.html
@@ -1,3 +1,6 @@
+<!-- Ændring af bilinformation for specifik bil i oversigten -->
+<!-- Julius Gissel -->
+
 <!DOCTYPE html>
 <html lang="da" xmlns:th="http://www.thymeleaf.org">
 <head>
