--- a/src/main/resources/templates/damageReportConfirmation.html
+++ b/src/main/resources/templates/damageReportConfirmation.html
@@ -1,3 +1,6 @@
+<!-- Side for oprettelse af specfik skadesrapport for bil med endt udlejning -->
+<!-- Julius Gissel -->
+
 <!DOCTYPE html>
 <html lang="da" xmlns:th="http://www.thymeleaf.org">
 <head>
