--- a/src/main/resources/templates/employeeEdit.html
+++ b/src/main/resources/templates/employeeEdit.html
@@ -1,3 +1,6 @@
+<!-- side for ændring af medarbejders informationer  -->
+<!-- Julius Gissel -->
+
 <!DOCTYPE html>
 <html lang="da" xmlns:th="http://www.thymeleaf.org">
 <head>
