--- a/src/main/resources/templates/registerAndDeliverCar.html
+++ b/src/main/resources/templates/registerAndDeliverCar.html
@@ -1,3 +1,6 @@
+<!-- Registrering og levering af bil til udlejning -->
+<!-- Julius Gissel -->
+
 <!DOCTYPE html>
 <html lang="da" xmlns:th="http://www.thymeleaf.org">
 <head>
