--- a/src/main/resources/templates/statisticsCarList.html
+++ b/src/main/resources/templates/statisticsCarList.html
@@ -1,3 +1,6 @@
+<!-- Side med tabel for hver bils statistikker -->
+<!-- Julius Gissel -->
+
 <!DOCTYPE html>
 <html lang="da" xmlns:th="http://www.thymeleaf.org">
 <head>
