--- a/src/main/resources/templates/employeeDetails.html
+++ b/src/main/resources/templates/employeeDetails.html
@@ -1,3 +1,6 @@
+<!-- Detaljeside over specifik medarbejder -->
+<!-- Julius Gissel -->
+
 <!DOCTYPE html>
 <html lang="da" xmlns:th="http://www.thymeleaf.org">
 <head>
