--- a/src/main/resources/templates/employeeOverviewAdmin.html
+++ b/src/main/resources/templates/employeeOverviewAdmin.html
@@ -1,3 +1,6 @@
+<!-- Oversigt over systemets medarbejdere med adminfunktioner (oprettelse af bruger) -->
+<!-- Julius Gissel -->
+
 <!DOCTYPE html>
 <html lang="da" xmlns:th="http://www.thymeleaf.org">
 <head>
