--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,3 +1,6 @@
+<!-- Startsside for programmet (Login side) -->
+<!-- Julius Gissel -->
+
 <!DOCTYPE html>
 <html lang="da" xmlns:th="http://www.thymeleaf.org">
 <head>
